improve csv writer